# ptokens-core

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md
src/: base58.rs  check_debug_mode.rs  check_enclave_is_initialized.rs  constants.rs  core_type.rs  crypto_utils.rs  database_utils.rs  debug_database_utils.rs  enclave_info.rs  errors.rs  lib.rs  notes  test_utils.rs  traits.rs  types.rs  utils.rs
src/btc/: add_btc_block_to_db.rs  btc_constants.rs  btc_database_utils.rs  btc_state.rs  btc_transaction.rs  btc_types.rs  btc_utils.rs  check_btc_parent_exists.rs  extract_utxos_from_op_return_txs.rs  extract_utxos_from_p2sh_txs.rs  filter_minting_params.rs  filter_op_return_deposit_txs.rs  filter_p2sh_deposit_txs.rs  filter_utxos.rs  get_btc_block_in_db_format.rs  get_btc_output_json.rs  get_deposit_info_hash_map.rs  increment_eth_nonce.rs  mod.rs  parse_btc_block.rs  parse_minting_params_from_op_return_deposits.rs  parse_minting_params_from_p2sh_deposits.rs  remove_minting_params_from_canon_block.rs  remove_old_btc_tail_block.rs  save_utxos_to_db.rs  set_btc_anchor_block_hash.rs  set_btc_canon_block_hash.rs  set_btc_latest_block_hash.rs  sign_transactions.rs  submit_btc_block.rs  update_btc_canon_block_hash.rs  update_btc_latest_block_hash.rs  update_btc_linker_hash.rs  update_btc_tail_block_hash.rs  validate_btc_block_header.rs  validate_btc_difficulty.rs  validate_btc_merkle_root.rs  validate_btc_proof_of_work.rs
src/btc_on_eos/: check_core_is_initialized.rs  constants.rs  crypto_utils.rs  database_utils.rs  mod.rs  test_utils.rs  utils.rs
src/btc_on_eth/: check_core_is_initialized.rs  constants.rs  database_utils.rs  mod.rs  utils.rs
src/chains/: mod.rs
src/debug_functions/: mod.rs
src/dictionaries/: dictionary_constants.rs  mod.rs
src/eos_on_eth/: check_core_is_initialized.rs  constants.rs  mod.rs
src/erc20_on_eos/: add_vault_contract_address_to_db.rs  check_core_is_initialized.rs  mod.rs
src/erc20_on_evm/: check_core_is_initialized.rs  mod.rs  traits.rs
src/eth/: add_block_and_receipts_to_database.rs  calculate_linker_hash.rs  check_parent_exists.rs  create_btc_transactions.rs  eth_constants.rs  eth_database_utils.rs  eth_json_codec.rs  eth_state.rs  eth_types.rs  extract_utxos_from_btc_txs.rs  filter_receipts.rs  filter_redeem_params.rs  get_eth_log.rs  get_eth_output_json.rs  get_linker_hash.rs  get_trie_hash_map.rs  increment_btc_nonce.rs  mod.rs  nibble_utils.rs  parse_eth_block.rs  parse_eth_block_and_receipts.rs  parse_eth_receipt.rs  parse_redeem_params.rs  path_codec.rs  remove_old_eth_tail_block.rs  remove_receipts_from_canon_block.rs  rlp_codec.rs  save_btc_utxos_to_db.rs  submit_eth_block.rs  trie.rs  trie_nodes.rs  update_eth_canon_block_hash.rs  update_eth_linker_hash.rs  update_eth_tail_block_hash.rs  update_latest_block_hash.rs  validate_block.rs  validate_receipts.rs
src/fees/: fee_constants.rs  fee_database_utils.rs  fee_enclave_state.rs  fee_utils.rs  fee_withdrawals.rs  mod.rs
src/get_enclave_state/: mod.rs
src/get_latest_block_numbers/: mod.rs
src/metadata/: metadata_chain_id.rs  metadata_origin_address.rs  metadata_protocol_id.rs  metadata_traits.rs  metadata_version.rs  mod.rs  test_utils.rs
src/test_utils/: mod.rs
src/utxo_manager/: mod.rs  utxo_constants.rs  (+2 more)
(+658 files in other folders)
