[package]
license = "MIT"
publish = false
edition = "2018"
version = "4.1.0"
readme = "README.md"
name = "ptokens_core"
keywords = ["provable", "defi", "crypto"]
authors = ["Provable Things <provable.xyz>", "Greg Kapka <greg@oraclize.it>"]

[features]
debug = []
non-validating = ["debug"]

[dependencies]
hex = "=0.4.0"
log = "=0.4.8"
rlp = "=0.4.2"
rand = "=0.7.2"
base58 = "=0.1.0"
chrono = "=0.4.9"
sha256 = "=0.1.0"
ethabi = "=12.0.0"
byteorder = "=1.3.2"
rustc-hex = "=2.0.1"
simplelog = "=0.7.3"
serde_json = "=1.0.40"
lazy_static = "=1.4.0"
tiny-keccak = "=1.5.0"
ethereum-types = "=0.9.2"
bitcoin_hashes = "=0.7.0"
serde_derive = "=1.0.101"
serde = { version = "=1", features = ["derive"] }
bitcoin = { git = "https://github.com/provable-things/rust-bitcoin.git", rev = "53a5a78" }
eos-primitives = { git = "https://github.com/provable-things/rust-eos.git", branch = "provable-additions" }
secp256k1 = { git = "https://github.com/bifrost-codes/rust-secp256k1", features = ["recovery", "unstable"] }
quick-error = "2.0.0"
derive_more = "0.99.10"

[dev-dependencies]
simple_logger = "1.6.0"
