[package]
license = "MIT"
publish = false
edition = "2018"
version = "4.50.0"
readme = "README.md"
name = "ptokens_core"
keywords = ["provable", "defi", "crypto"]
authors = ["Provable Things <provable.xyz>", "Greg Kapka <greg@oraclize.it>"]

[features]
debug = []
disable-fees = ["debug"]
non-validating = ["debug"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
overflow-checks = true

[dependencies]
hex = "0.4.3"
log = "0.4.14"
rlp = "0.5.0"
rand = "0.8.3"
strum = "0.20.0"
chrono = "0.4.19"
ethabi = "14.0.0"
byteorder = "1.4.3"
rustc-hex = "2.1.0"
simplelog = "0.10.0"
serde_json = "1.0.64"
lazy_static = "1.4.0"
strum_macros = "0.20.1"
ethereum-types = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
bitcoin = { version = "0.26.0", features = ["use-serde", "rand"] }
eos-chain = { git = "https://github.com/bifrost-finance/rust-eos" }
secp256k1 = { git = "https://github.com/bifrost-finance/rust-secp256k1", features = ["recovery", "rand-std"] }
quick-error = "2.0.0"
derive_more = "0.99.13"
keccak-hasher = "0.15.3"
triehash = "0.8.4"

[dev-dependencies]
simple_logger = "1.11.0"
